# broadsheet

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-FONTS  README.md  ROADMAP.md
.claude/skills/broadsheet/: SKILL.md
.github/workflows/: ci.yml
content/: bloom-filter-script.md
examples/: bloom_filter.rs  features_demo.rs  hello.rs  lsm_tree.rs  showcase.rs  slideshow_demo.rs  union_find.rs
graphify-out/: GRAPH_REPORT.md  graph.json
src/: animate.rs  easing.rs  layout.rs  lib.rs  movie.rs  player.rs  primitives.rs  record.rs  render.rs  scene.rs  style.rs  timeline.rs  widgets.rs
