[package]
name = "broadsheet"
version = "0.2.0"
edition = "2021"
description = "Newspaper-styled 2D animation engine for algorithm & data-structure explainer videos — stateless timeline, deterministic frame recording, built on macroquad"
license = "MIT"
authors = ["Khushal Agrawal <dev@khushal.net>"]
readme = "README.md"
keywords = ["animation", "visualization", "macroquad", "explainer", "algorithms"]
categories = ["graphics", "multimedia::video", "visualization"]
repository = "https://github.com/SK1PPR/broadsheet"
documentation = "https://docs.rs/broadsheet"
include = [
    "src/**",
    "examples/**",
    "assets/fonts/*",
    "README.md",
    "ARCHITECTURE.md",
    "LICENSE",
    "LICENSE-FONTS",
]

[dependencies]
macroquad = "0.4"

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2
